fix: prevent scrollbar from showing during animations

--- a/src/index.scss
+++ b/src/index.scss
@@ -12,6 +12,7 @@
 body {
   font-size: 170%;
   line-height: 1.5;
+  overflow-x: hidden;
 }
 
 * {
